Update tycho and friends