@@ -65,10 +65,13 @@
 
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
-        <tycho-version>2.6.0</tycho-version>
+		<!--suppress UnresolvedMavenProperty -->
+		<logback-test-config>${maven.multiModuleProjectDirectory}/logback-test.xml</logback-test-config>
 
-        <epsilon-runtime-version>1.4.0.20210919_103207_8f2ef01_develop</epsilon-runtime-version>
-        <epsilon-runtime-eclipse-version>1.4.0.20210919_133947_3330a32_develop</epsilon-runtime-eclipse-version>
+        <tycho-version>2.7.3</tycho-version>
+
+		<epsilon-runtime-version>1.4.0.20220616_093846_72efef9e_develop</epsilon-runtime-version>
+		<epsilon-runtime-eclipse-version>1.4.0.20220616_120313_0d84d4a0_develop</epsilon-runtime-eclipse-version>
 
         <emf-genmodel-generator-version>1.0.2.20220330_082302_0cadb6da_develop</emf-genmodel-generator-version>
         <judo-genmodel-generator-version>1.0.1.20220405_155701_8eaa7eb0_develop</judo-genmodel-generator-version>
@@ -76,9 +79,10 @@
 
         <xtext-version>2.27.0</xtext-version>
         <emf-mwe2-launch-version>2.12.1</emf-mwe2-launch-version>
-        <slf4j-version>1.6.6</slf4j-version>
+        <slf4j-version>1.7.36</slf4j-version>
 
-
+		<surefire-version>3.0.0-M5</surefire-version>
+		
         <!-- Pax exam dependencies -->
         <karaf-version>4.3.6</karaf-version>
         <cxf-version>3.5.1</cxf-version>
@@ -95,7 +99,6 @@
         <apache-commons-karaf-features-version>1.0.6</apache-commons-karaf-features-version>
         <apache-httpclient-karaf-features-version>1.0.0</apache-httpclient-karaf-features-version>
         <pax-exam-version>4.13.3</pax-exam-version>
-        <log4j.configuration>log4j.properties</log4j.configuration>
 
 		<!-- Define overridable properties for tycho-surefire-plugin -->
 		<platformSystemProperties />
@@ -270,23 +273,23 @@
                         <testOutputDirectory>${basedir}/src/test/xtend-gen</testOutputDirectory>
                     </configuration>
                     <dependencies>
-                        <dependency>
-                            <groupId>org.eclipse.jdt</groupId>
-                            <artifactId>org.eclipse.jdt.core</artifactId>
-                            <version>3.24.0</version>
-                        </dependency>
+						<dependency>
+							<groupId>org.eclipse.jdt</groupId>
+							<artifactId>org.eclipse.jdt.core</artifactId>
+							<version>3.28.0</version>
+						</dependency>
 
-                        <dependency>
-                            <groupId>org.eclipse.jdt</groupId>
-                            <artifactId>org.eclipse.jdt.compiler.apt</artifactId>
-                            <version>1.3.1200</version>
-                        </dependency>
-                        <dependency>
-                            <groupId>org.eclipse.jdt</groupId>
-                            <artifactId>org.eclipse.jdt.compiler.tool</artifactId>
-                            <version>1.2.1100</version>
-                        </dependency>
-                    </dependencies>
+						<dependency>
+							<groupId>org.eclipse.jdt</groupId>
+							<artifactId>org.eclipse.jdt.compiler.apt</artifactId>
+							<version>1.3.1200</version>
+						</dependency>
+						<dependency>
+							<groupId>org.eclipse.jdt</groupId>
+							<artifactId>org.eclipse.jdt.compiler.tool</artifactId>
+							<version>1.2.1100</version>
+						</dependency>
+					</dependencies>
                 </plugin>
 
 
@@ -398,19 +401,26 @@
 					</configuration>
 				</plugin>
 
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>3.0.0-M5</version>
-                    <configuration>
-                        <argLine>-Dfile.encoding=UTF-8</argLine>
-                        <trimStackTrace>false</trimStackTrace>
-                        <systemPropertyVariables>
-                            <log4j.configuration>${log4j.configuration}</log4j.configuration>
-                        </systemPropertyVariables>
-                    </configuration>
-                </plugin>
-
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>${surefire-version}</version>
+					<configuration>
+						<argLine>-Dfile.encoding=UTF-8</argLine>
+						<trimStackTrace>false</trimStackTrace>
+						<systemPropertyVariables>
+							<logback.configurationFile>${logback-test-config}</logback.configurationFile>
+						</systemPropertyVariables>
+						<argLine>
+							-Dfile.encoding=UTF-8
+							--add-opens java.base/java.lang=ALL-UNNAMED
+							--add-opens java.base/java.util=ALL-UNNAMED
+							--add-opens java.base/java.time=ALL-UNNAMED
+						</argLine>
+						<trimStackTrace>false</trimStackTrace>
+					</configuration>
+				</plugin>
+				
                 <!--This plugin's configuration is used to store Eclipse m2e settings
                     only. It has no influence on the Maven build itself. -->
                 <plugin>
@@ -683,6 +693,14 @@
     <dependencyManagement>
         <dependencies>
 			<dependency>
+				<groupId>fr.jmini.ecentral</groupId>
+				<artifactId>eclipse-platform-dependencies</artifactId>
+				<version>4.18</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			
+			<dependency>
 				<groupId>com.google.guava</groupId>
 				<artifactId>guava</artifactId>
 				<version>27.1-jre</version>
@@ -731,24 +749,22 @@
                 <scope>provided</scope>
             </dependency>
 
-            <dependency>
-                <groupId>org.slf4j</groupId>
-                <artifactId>slf4j-log4j12</artifactId>
-                <version>${slf4j-version}</version>
-                <scope>test</scope>
-            </dependency>
+			<dependency>
+				<groupId>ch.qos.logback</groupId>
+				<artifactId>logback-classic</artifactId>
+				<version>1.2.11</version>
+			</dependency>
+			
         </dependencies>
     </dependencyManagement>
     <dependencies>
         <dependency>
             <groupId>org.eclipse.emf</groupId>
             <artifactId>org.eclipse.emf.ecore</artifactId>
-            <version>2.18.0</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.emf</groupId>
             <artifactId>org.eclipse.emf.common</artifactId>
-            <version>2.16.0</version>
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
